2012-08-22  Allan Sandfeld Jensen  <allan.jensen@nokia.com>

        Wrong default for new ScrollAnimatorEnabled preference.

        Reviewed by Simon Hausmann.

        ScrollAnimatorEnabled introduced in r126291, should default to 'true'
        to preserve existing behaviour on WK2 platforms that already enabled 
        SMOOTH_SCROLLING unconditionally.

        * Shared/WebPreferencesStore.h:
        (WebKit):

2012-08-22  Allan Sandfeld Jensen  <allan.jensen@nokia.com>

        Unreviewed, build fixup for r126291.

        * Shared/WebPreferencesStore.h:
        (WebKit):

2012-08-22  Allan Sandfeld Jensen  <allan.jensen@nokia.com>

        [Qt] Optionally support smooth-scrolling on all platforms
        https://bugs.webkit.org/show_bug.cgi?id=74926

        Reviewed by Simon Hausmann.

        Expose scroll-animator preference, but ensure animated smooth scrolling
        on the web process side is disabled when scrolling has been delegated
        to the UI process.

        * Shared/WebPreferencesStore.h:
        * WebProcess/WebPage/WebPage.cpp:
        (WebKit::WebPage::setResizesToContentsUsingLayoutSize):
        (WebKit::WebPage::updatePreferences):

2012-08-22  Luiz Agostini  <luiz.agostini@nokia.com>

        [Qt] Avoid using WebKit macros in qrawwebview_p.h
        https://bugs.webkit.org/show_bug.cgi?id=94648

        Reviewed by Noam Rosenthal.

        ENABLE(FEATURE) should not be used in qrawwebview_p.h because it is an API header file.

        * UIProcess/API/qt/raw/qrawwebview.cpp:
        (QRawWebView::sendTouchEvent):
        * UIProcess/API/qt/raw/qrawwebview_p.h:

2012-08-21  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r126216.
        http://trac.webkit.org/changeset/126216
        https://bugs.webkit.org/show_bug.cgi?id=94661

        "Broke many Mac-WK2 tests" (Requested by bradee-oh on
        #webkit).

        * WebProcess/com.apple.WebProcess.sb.in:
